--- a/stylesheet.css
+++ b/stylesheet.css
@@ -26,11 +26,13 @@ h3 {
   color: #ef9595;
   text-align: center;
   font-size: 30px;
+  margin: 20px 0;
 }
 h4 {
   color: #ef9595;
   text-align: center;
   margin: 20px;
+  font-size: 25px;
 }
 nav img {
   width: 90px;
