--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,6 +4,12 @@
   padding: 0;
   box-sizing: border-box;
 }
+html,
+body {
+  width: 100%;
+  height: 100%;
+}
+
 body {
   background-image: url(./background.jpg);
   background-attachment: fixed;
@@ -167,7 +173,7 @@ nav img {
 }
 
 footer {
-  background-image: url(./imgs/background-f.PNG);
+  background-image: url(./imgs/background-footer-small.jpg);
   background-position: center;
   height: 500px;
 }
@@ -177,13 +183,13 @@ footer {
   text-align: center;
 }
 .icons {
-  width: 500px;
+  width: 100%;
   display: flex;
   justify-content: space-around;
   align-items: center;
 }
 .icons img {
-  width: 50px;
+  width: 30px;
 }
 
 .logo img {
