--- a/stylesheet.css
+++ b/stylesheet.css
@@ -201,3 +201,17 @@ footer {
   color: white;
   text-align: center;
 }
+
+@media only screen and (min-width: 600px) {
+  body {
+    background-image: url(./imgs/background-long-difuminado.jpg);
+    background-attachment: fixed;
+    background-position: center;
+    font-family: "Bodoni Moda", serif;
+  }
+  footer {
+    background-image: url(./imgs/background-footer-long.jpg);
+    background-position: center;
+    height: 500px;
+  }
+}
