--- a/stylesheet.css
+++ b/stylesheet.css
@@ -90,6 +90,9 @@ nav img {
 .free-call a:hover {
   color: #d88ab1;
 }
+.free-call-big-screen {
+  display: none;
+}
 .pink-panel {
   background-color: rgb(239, 149, 149, 0.6);
   color: white;
@@ -208,6 +211,51 @@ footer {
     background-attachment: fixed;
     background-position: center;
     font-family: "Bodoni Moda", serif;
+  }
+  h1 {
+    font-size: 4vw;
+  }
+  h2 {
+    font-size: 1.5vw;
+  }
+  .hero {
+    display: flex;
+    flex-direction: row-reverse;
+    width: 85%;
+  }
+  .hero img {
+    width: 200px;
+    height: 250px;
+    border-radius: 35px;
+  }
+  .img-call-to-action {
+    width: 30%;
+  }
+  .hero-text {
+    margin: 0;
+    width: 50%;
+  }
+  .hero-text p {
+    font-size: 1.2vw;
+  }
+  .free-call {
+    display: none;
+  }
+  .free-call-big-screen {
+    display: block;
+    width: 60%;
+    text-align: center;
+    border: 0.5px;
+    border-style: solid;
+    border-color: #ef9595;
+    background-color: rgb(255, 255, 255, 0.5);
+    border-radius: 20px;
+    margin: 5px auto;
+  }
+  .free-call-big-screen a {
+    text-decoration: none;
+    color: #90667b;
+    text-align: center;
   }
   footer {
     background-image: url(./imgs/background-footer-long.jpg);
