--- a/stylesheet.css
+++ b/stylesheet.css
@@ -257,6 +257,15 @@ footer {
     color: #90667b;
     text-align: center;
   }
+  .section {
+    display: flex;
+  }
+  .section img {
+    width: 30%;
+    border-radius: 70px;
+    display: block;
+    margin: 0 auto;
+  }
   footer {
     background-image: url(./imgs/background-footer-long.jpg);
     background-position: center;
