quantum healing section

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -257,14 +257,17 @@ footer {
     color: #90667b;
     text-align: center;
   }
-  .section {
+  .section-text {
+    width: 90%;
     display: flex;
+    margin: 50px 0;
+  }
+  .text-adjust {
+    width: 40%;
   }
   .section img {
     width: 30%;
     border-radius: 70px;
-    display: block;
-    margin: 0 auto;
   }
   footer {
     background-image: url(./imgs/background-footer-long.jpg);
