--- a/stylesheet.css
+++ b/stylesheet.css
@@ -107,19 +107,20 @@ nav img {
   text-align: center;
 }
 .slideshow-container {
-  width: 300px;
+  width: 200px;
   position: relative;
-  margin: auto;
+  margin: 50px auto;
 }
 .mySlides {
   display: none;
 }
 .slideshow-container img {
   vertical-align: middle;
+  border-radius: 10%;
 }
 .prev img,
 .next img {
-  width: 10px;
+  width: 0.5px;
   cursor: pointer;
   position: absolute;
   transition: 0.6s ease;
@@ -132,21 +133,23 @@ nav img {
 }
 .prev:hover,
 .next:hover {
-  background-color: rgba(0, 0, 0, 0.8);
+  color: #94689a;
 }
 .text {
   color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
+  font-size: 20px;
+  padding: 1px 12px;
   position: absolute;
-  bottom: 8px;
+  bottom: -100px;
   width: 100%;
   text-align: center;
+  border-radius: 20px;
+  background-color: rgba(239, 149, 149, 0.7);
 }
 .numbertext {
   color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
+  font-size: 20x;
+  padding: 20px 12px;
   position: absolute;
   top: 0;
 }
@@ -154,11 +157,14 @@ nav img {
   cursor: pointer;
   height: 15px;
   width: 15px;
-  margin: 0 2px;
+  margin: 5px 2px;
   background-color: #ef9595;
   border-radius: 50%;
   display: inline-block;
   transition: background-color 0.6s ease;
+}
+.dots-container {
+  text-align: center;
 }
 .active,
 .dot:hover {
@@ -316,6 +322,11 @@ footer {
     flex-direction: row-reverse;
     justify-content: center;
     align-items: center;
+  }
+  .slideshow-container {
+    width: 400px;
+    position: relative;
+    margin: 50px auto;
   }
 
   footer {
