--- a/stylesheet.css
+++ b/stylesheet.css
@@ -114,6 +114,7 @@ nav img {
 .mySlides {
   display: none;
 }
+
 .slideshow-container img {
   vertical-align: middle;
   border-radius: 10%;
@@ -125,22 +126,13 @@ nav img {
   position: absolute;
   transition: 0.6s ease;
 }
-.next {
-  right: 0;
-}
-.prev {
-  left: 0;
-}
-.prev:hover,
-.next:hover {
-  color: #94689a;
-}
+
 .text {
   color: #f2f2f2;
   font-size: 20px;
   padding: 1px 12px;
   position: absolute;
-  bottom: -100px;
+  bottom: -70px;
   width: 100%;
   text-align: center;
   border-radius: 20px;
@@ -327,6 +319,61 @@ footer {
     width: 400px;
     position: relative;
     margin: 50px auto;
+  }
+  .mySlides {
+    display: none;
+  }
+  .slideshow-container img {
+    vertical-align: middle;
+    border-radius: 10%;
+  }
+  .text {
+    color: #f2f2f2;
+    font-size: 20px;
+    padding: 1px 12px;
+    position: absolute;
+    bottom: -100px;
+    width: 100%;
+    text-align: center;
+    border-radius: 20px;
+    background-color: rgba(239, 149, 149, 0.7);
+  }
+  .numbertext {
+    color: #f2f2f2;
+    font-size: 20x;
+    padding: 20px 12px;
+    position: absolute;
+    top: 0;
+  }
+  .dot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 5px 2px;
+    background-color: #ef9595;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+  }
+  .dots-container {
+    text-align: center;
+  }
+  .active,
+  .dot:hover {
+    background-color: #d98482;
+  }
+  .fade {
+    animation-name: fade;
+    animation-duration: 1.5s;
+  }
+
+  @keyframes fade {
+    from {
+      opacity: 0.4;
+    }
+    to {
+      opacity: 1;
+    }
   }
 
   footer {
